working on assignment2

--- a/NaturalEnvironment/appsettings.json
+++ b/NaturalEnvironment/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesEnvironmentContext": "Data Source=RazorPagesEnvironmentContext-5721de19-d6b8-40ba-9b97-32d368e2e726.db"
+  }
 }
