working on my 3rd assignment

--- a/NaturalEnvironment/appsettings.json
+++ b/NaturalEnvironment/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesNaturalEnvironmentContext": "Data Source=RazorPagesNaturalEnvironmentContext-310f297a-2b49-4e92-8bc9-9c807c49d39d.db"
+  }
 }
